--- a/client-state/text-editor/task.css
+++ b/client-state/text-editor/task.css
@@ -1,10 +1,38 @@
 textarea {
-  max-width: 100%;
-  width: 100%;
-  display: block;
-  padding: 10px 20px;
-  margin: 0 0 20px 0;
-  font-family: Golos, Arial, sans-serif;
-  border: 1px solid #e2e2e2;
-  box-sizing: border-box;
+	max-width: 100%;
+	width: 100%;
+	display: block;
+	padding: 10px 20px;
+	margin: 0 0 20px 0;
+	font-family: Golos, Arial, sans-serif;
+	border: 1px solid #e2e2e2;
+	box-sizing: border-box;
 }
+
+.button {
+	color: white;
+	font-size: 150%;
+	text-transform: uppercase;
+
+	display: block;
+	height: 200px;
+	width: 50%;
+
+	border-radius: 30px;
+	background-color: rgb(11, 90, 136);
+
+	transition: background-color 4s, font-size 3s;
+}
+
+.button:hover {
+	background-color: rgb(58, 2, 2);
+	font-size: 300%;
+}
+
+.button:active {
+	transform: translateY(4px);
+	box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+	background-color: black;
+	transition: background-color 0s;
+}
+
